<resources>
    <!-- home page strings -->
    <string name="app_name">Shuka Digital</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="get_a_quote">Get a Free\nQUOTE</string>
    <string name="make_a_payment">Make a\nPAYMENT</string>
    <string name="manage_policies">Manage\nPOLICIES</string>
    <string name="visit_claims_center">Visit\nCLAIMS CENTER</string>
    <string name="view_id_cards">View\nID CARDS</string>
    <string name="tools_for_everyday_living">Tools for everyday\nLIVING</string>
    <string name="login">Login</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="remember_me_switch">Remember Me</string>
    <string name="register_link">Register for an account</string>

    <!-- make a payment strings -->
    <string name="title_activity_make_payment">Make a payment</string>


</resources>
