<?xml version="1.0" encoding="utf-8"?><!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:app="http://schemas.android.com/apk/res-auto"--><!--xmlns:tools="http://schemas.android.com/tools"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--android:paddingBottom="@dimen/activity_vertical_margin"--><!--android:paddingLeft="@dimen/activity_horizontal_margin"--><!--android:paddingRight="@dimen/activity_horizontal_margin"--><!--android:paddingTop="@dimen/activity_vertical_margin"--><!--app:layout_behavior="@string/appbar_scrolling_view_behavior"--><!--tools:context="com.perfecto.lees.myapplication.MainActivity"--><!--tools:showIn="@layout/app_bar_main">-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_page_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    android:orientation="vertical"
    android:weightSum="3"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_margin="1dp"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:gravity="right">

        <ImageView
            android:id="@+id/login_icon_image_view"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:paddingTop="3dp"
            android:src="@drawable/login_lock" />

        <TextView
            android:id='@+id/loginBtn'
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:paddingRight="20dp"
            android:paddingTop="9dp"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="23sp"
            android:textStyle="bold"></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">

        <!--<Button-->
        <!--android:id="@+id/Button01"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_marginRight="3dp"-->
        <!--android:layout_weight="0.5"-->
        <!--android:text="@string/make_a_payment"-->
        <!--android:textColor="#FFFFFF"-->
        <!--android:background="#00007f"-->
        <!--android:textSize="25dp"-->
        <!--android:textStyle="bold"-->
        <!--android:textAllCaps="false">-->
        <!--</Button>-->
        <Button
            android:id="@+id/Button01_make_payment"
            style="@style/MainPageButton"
            android:text="@string/make_a_payment">
        </Button>

        <!--<Button-->
            <!--android:id="@+id/Button02"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="0.5"-->
            <!--android:background="#00007f"-->
            <!--android:text="@string/get_a_quote"-->
            <!--android:textAllCaps="false"-->
            <!--android:textColor="#FFFFFF"-->
            <!--android:textSize="25dp"-->
            <!--android:textStyle="bold">-->
        <!--</Button>-->
        <Button
            android:id="@+id/Button02_get_free_quote"
            style="@style/MainPageButton"
            android:text="@string/get_a_quote">
        </Button>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/Button03_manage_policies"
            style="@style/MainPageButton"
            android:text="@string/manage_policies">
        </Button>

        <Button
            android:id="@+id/Button04_view_id_cards"
            style="@style/MainPageButton"
            android:text="@string/view_id_cards">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/Button05_visit_claims_center"
            style="@style/MainPageButton"
            android:text="@string/visit_claims_center">
        </Button>

        <Button
            android:id="@+id/Button06_tools_for_living"
            style="@style/MainPageButton"
            android:text="@string/tools_for_everyday_living">
        </Button>

    </LinearLayout>
</LinearLayout>

